--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,10 @@
-.App {
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +41,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
